--- a/views/team.jade
+++ b/views/team.jade
@@ -121,7 +121,7 @@ block content
 
 		div.widget
 			h2 Minor Leaguers
-			mixin minorLeaguers(players, config, displayConfig)
+			mixin minorLeaguers(players, team, config, displayConfig)
 			p
 				i.smallNote * Vulture Threshhold: 150 AB / 50 IP
 
