--- a/views/partials/mlbSchedule.jade
+++ b/views/partials/mlbSchedule.jade
@@ -25,7 +25,9 @@ div
 						td @
 						td= game.homeTeamName
 						-var time = moment(game.timeDate).format("h:mm")
-						td= time + " pm"
+						td
+							a(target="_blank" href="http://mlb.mlb.com/mlb/gameday/index.jsp?gid=" + game.gameday)
+								= time + " pm"
 						-if(game.playersInGame && game.playersInGame.length > 0)
 							-var batters = [];
 							-var pitchers = [];
