--- a/views/layout.jade
+++ b/views/layout.jade
@@ -32,7 +32,7 @@ html
 						-else
 							li#teamsLink
 								a(href="/team/"+user.team) My Team
-								ul#subTeams
+								ul#subTeams(style="padding-top:10px")
 									-each team in teams
 										-if(team.teamId != 0)
 											li
