--- a/views/partials/player.jade
+++ b/views/partials/player.jade
@@ -104,7 +104,8 @@ mixin player(player, position, displayConfig)
 			-if(displayConfig.addVultureButton)
 				td
 					-var disabled = player.vulture && (player.vulture.is_vultured || player.vulture.vultured_for_id)
-					input(type="radio" name="removingPlayer" value=player._id disabled=disabled)
+					input(type="radio" name="removingPlayer" value=player._id disabled=disabled 
+						onclick="selectVultureGiveUp('" + player.name_display_first_last + "')")
 					-if(player.vulture)
 						-if(player.vulture.is_vultured)
 							td.smallNote
