--- a/views/playerList.jade
+++ b/views/playerList.jade
@@ -26,9 +26,17 @@ block inlineScripts
 		}
 
 		$(document).ready(function() {
-			var options = { widgetOptions: { stickyHeaders : '', stickyHeaders_attachTo : '.widget' }};
-			$("#freeAgentBatters").tablesorter(options); 
-			$("#freeAgentPitchers").tablesorter(); 
+			$('#fabContainer').html("<img src='/public/ajax-loader.gif' />");
+			$('#fapContainer').html("<img src='/public/ajax-loader.gif' />");
+
+			$.get('/api/players/freeAgents', function(result) {
+				$("#fabContainer").html(result.batterHtml);
+				$("#fapContainer").html(result.pitcherHtml);
+
+				var options = { widgetOptions: { stickyHeaders : '', stickyHeaders_attachTo : '.widget' }};
+				$("#freeAgentBatters").tablesorter(options); 
+				$("#freeAgentPitchers").tablesorter(options); 
+			})
 		});
 
 block content
@@ -47,54 +55,14 @@ block content
 			div.widget
 				h2 Free Agent Batters - 2014 Stats
 				p (Hint: Click Column Header to Sort)
-				div(style="max-height:500px;overflow-y:scroll;")
-					table#freeAgentBatters
-						thead
-							th Name
-							th AB
-							th HR
-							th R
-							th RBI
-							th SB
-							th OBP
-						tbody
-							-each player in freeAgentBatters
-								tr
-									td
-										a.name(href="/player/"+player._id)= player.name_display_first_last
-									-if(player.stats[0])
-										td= player.stats[0].ab
-										td= player.stats[0].hr
-										td= player.stats[0].r
-										td= player.stats[0].rbi
-										td= player.stats[0].sb
-										td= player.stats[0].obp
+				div#fabContainer(style="max-height:500px;overflow-y:scroll;")
+					
 		div(style="width:33%;display:inline-block;vertical-align:top")
 			div.widget
 				h2 Free Agent Pitchers - 2014 Stats
 				p (Hint: Click Column Header to Sort)
-				div(style="max-height:500px;overflow-y:scroll;")
-					table#freeAgentPitchers
-						thead
-							th Name
-							th IP
-							th K
-							th WHIP
-							th ERA
-							th W
-							th SV
-						tbody
-							-each player in freeAgentPitchers
-								tr
-									td
-										a.name(href="/player/"+player._id)= player.name_display_first_last
-									-if(player.stats[0])
-										td= player.stats[0].ip
-										td= player.stats[0].so
-										td= player.stats[0].whip
-										td= player.stats[0].era
-										td= player.stats[0].w
-										td= player.stats[0].sv
+				div#fapContainer(style="max-height:500px;overflow-y:scroll;")
+					
 		div
 			-if(user && user.role == 'admin')
 				div(style="width:50%;display:inline-block;vertical-align:top")
