--- a/views/playerList.jade
+++ b/views/playerList.jade
@@ -70,9 +70,11 @@ block content
 						h2 Players Missing ESPN Id's
 						table
 							-each player in playersMissingESPN
-								tr
-									td
-										a.name(href="/player/"+player._id)= player.name_display_first_last
-									td= player.espn_player_name
-									td
-										a.name(href="/admin/player/" + player._id)= "Admin"
+								-if(player.history[0] && player.history[0].fantasy_team != 0)
+									tr
+										td
+											a.name(href="/player/"+player._id)= player.name_display_first_last
+										td= player.espn_player_name
+										td= teams[player.history[0].fantasy_team].fullName
+										td
+											a.name(href="/admin/player/" + player._id)= "Admin"
