--- a/public/css/master.css
+++ b/public/css/master.css
@@ -66,7 +66,7 @@ div.header ul li a span {
     border-right: solid 1px #3D3D4C;
     -webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
-	border-radius: 3px;
+	border-radius: 0px 0px 5px 5px;
 }
 
 #subTeams li {
